Fixes bugs + Adds methods in IterativeDeepengingEngine
Bugs:
- IterativeDeepengingEngine hanged when called with mat situations
- Negamax hanged when no there as no possible moves
- RandomMoveSelector hanged when list was empty
Adds
- IterativeDeepengingEngine.getBestMove(B,List<M>)
- IterativeDeepengingEngine.getBestMoves(B,List<M>)
Upgrades
- junit to 5.10.2