@@ -3,7 +3,6 @@ package com.fathzer.games.ai.moveselector;
 import java.util.List;
 import java.util.OptionalInt;
 import java.util.function.ToIntFunction;
-import java.util.stream.Collectors;
 
 import com.fathzer.games.ai.evaluation.EvaluatedMove;
 
@@ -17,8 +16,7 @@ public class StaticMoveSelector<M,D> extends MoveSelector<M,D> {
 	@Override
 	public List<EvaluatedMove<M>> select(D data, List<EvaluatedMove<M>> result) {
 		final OptionalInt maxImmediateValue = result.stream().mapToInt(em->evaluator.applyAsInt(em.getContent())).max();
-		result = result.stream().filter(em -> evaluator.applyAsInt(em.getContent())==maxImmediateValue.getAsInt()).collect(Collectors.toList());
+		result = result.stream().filter(em -> evaluator.applyAsInt(em.getContent())==maxImmediateValue.getAsInt()).toList();
 		return super.select(data, result);
 	}
-
 }
